<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="195dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/greeting"
                android:textColor="#000000"
                android:textSize="30sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="20dp"
                android:text="@string/blog"
                android:textColor="#000000">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/blog2">

            </TextView>
        </FrameLayout>


        <FrameLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="250dp">


        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"

            android:text="@string/recent"
            android:textColor="#000000" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    app:columnCount="5"
                    app:rowCount="1"
                    >


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/rounded">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            app:layout_constraintBottom_toTopOf="@id/title_imageview"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/brooklynbridge"
                            tools:layout_editor_absoluteX="800dp"/>

                        <TextView
                            android:id="@+id/title_imageview"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:text="@string/Brooklyn_Bridge"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imageView" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/rounded">
                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            app:srcCompat="@drawable/johnhancocktower"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/title_imageview3"/>

                        <TextView
                            android:id="@+id/title_imageview3"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:text="@string/John_Hancock"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imageView3" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/rounded">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            app:srcCompat="@drawable/atlanta"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/title_imageview4"/>

                        <TextView
                            android:id="@+id/title_imageview4"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:text="@string/Atlanta"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imageView4" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/rounded">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            app:srcCompat="@drawable/goldengate"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/title_imageview5"/>

                        <TextView
                            android:id="@+id/title_imageview5"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:text="@string/Goldengate_Bridge"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imageView5" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.gridlayout.widget.GridLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:paddingTop="20dp"
            android:background="@drawable/rounded"
            android:elevation="5dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot"
                android:textColor="#000000"
                android:paddingStart="20dp"/>

            <ListView
                android:id="@+id/listview"
                android:layout_width="798dp"
                android:layout_height="280dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/textView3"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="20dp"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/subscriber"
            android:textColor="#000000" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/topoftherock"
                        android:background="@drawable/image_rounded"
                        android:paddingTop="0dp"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/imageView10"
                        android:layout_alignEnd="@id/imageView10"
                        android:layout_alignBottom="@id/imageView10"
                        android:layout_marginBottom="40dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/first_subscriber"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_rounded">


                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/timesquare"
                        android:scaleType="centerCrop"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/imageView9"
                        android:layout_alignEnd="@id/imageView9"
                        android:layout_alignBottom="@id/imageView9"
                        android:layout_marginBottom="40dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/second_subscriber"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </RelativeLayout>
            </TableRow>


        </TableLayout>

    </LinearLayout>
</ScrollView>